--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SampleProject</string>
-    <string name="retry">Retry</string>
+    <string name="retry">Swipe down again, there has been a problem loading the list </string>
     <string name="about">About</string>
     <string name="star">Star:</string>
     <string name="watchers">Watchers:</string>
